# ClaimStreamAI

./: README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb
src/claimstreamai/synthetic/: generator.py
